--- a/app/views/event/_attendees.html.erb
+++ b/app/views/event/_attendees.html.erb
@@ -7,7 +7,7 @@ Only show attendees sharing:<br />
   <% end %>
 <br />
 <br />
-Only show attendees travelling from:<br />
+Only show attendees traveling from:<br />
 
   <% cities = [""] + @event.attendees.collect{|attendee| attendee.city + ", " + attendee.region}.flatten.uniq %>
   <%=  select_tag("city", options_for_select(cities), :class => 'submittable') %>
