Added a section to home page for events a user is attending

--- a/app/views/main/index.erb
+++ b/app/views/main/index.erb
@@ -26,6 +26,7 @@
             <div class="content-wrapper">
                 <div class="left-column">
                     &nbsp;
+                    <%= render :partial => 'events_attending' unless current_user.nil? %>
                 </div>
                 <div class="right-column">
                     <%= render "shared/search_box" %>
