--- a/app/views/event/_attendees.html.erb
+++ b/app/views/event/_attendees.html.erb
@@ -9,7 +9,7 @@ Only show attendees sharing:<br />
 <br />
 Only show attendees traveling from:<br />
 
-  <% cities = [""] + @event.attendees.collect{|attendee| attendee.city + ", " + attendee.region}.flatten.uniq %>
+  <% cities = [""] + @event.attendees.collect{|attendee| attendee.city + ", " + attendee.region unless attendee.city.blank? || attendee.region.blank?}.flatten.uniq %>
   <%=  select_tag("city", options_for_select(cities), :class => 'submittable') %>
 
  <% end %>
