--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <%= stylesheet_link_tag :all %>
     <%= javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js' %>
     <%= javascript_include_tag 'jquery.rails.js' %>
+    <%= javascript_include_tag 'rails' %>
     <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tag %>
 </head>
