--- a/app/views/shared/_comment_form.erb
+++ b/app/views/shared/_comment_form.erb
@@ -1,4 +1,9 @@
-<% form_for :comment, @comment, :html => { :multipart => true } do |f| %>
- <%= f.text_area :message, :size => "60x12" %>
- <%= submit_tag "Submit" %>
+<div id="new_comment_<%= @comment.parent.nil? ? '0' : @comment.parent.id %>">
+</div>
+<div id ="comment_form_for_<%= @comment.parent.nil? ? '0' : @comment.parent.id %>">
+  <% form_for :comment, :url => comment_new_path(@group.id), :remote => true, :html => { :multipart => true } do |f| %>
+   <%= f.text_area :message, :size => "60x12" %>
+   <%= f.hidden_field :parent_id %>
+   <%= submit_tag "Submit" %>
 <% end %>
+</div>
