--- a/app/views/user/myaccount.html.erb
+++ b/app/views/user/myaccount.html.erb
@@ -1,4 +1,18 @@
-Update My Account<br />
-<%= render :partial => 'user_info' %><br />
-<br />
-<%= link_to 'Delete My Account', delete_account_path, :confirm => 'Are you sure you want to delete your account?' %>
+        <div class="content content-two-columns">
+            <div class="banner-area">
+                <h1>User Account</h1>
+            </div>
+            <div class="column-wrapper">
+                <div class="left-column">
+                    <%= render :partial => 'user_info' %>
+                </div>
+                <div class="right-column">
+                    <div class="block">
+                      
+                    </div>
+                </div>
+                <div class="clear-fix">&nbsp;</div>
+                <div class="right-column-bg-bottom-fix">&nbsp;</div>
+            </div>
+        </div>
+      <!--// <%= link_to 'Delete My Account', delete_account_path, :confirm => 'Are you sure you want to delete your account?' %> //-->
