--- a/app/views/event/_filtered_groups.html.erb
+++ b/app/views/event/_filtered_groups.html.erb
@@ -1,8 +1,3 @@
-<% @groups.closest_to_user(current_user).each do |group| %>
-  <%= link_to group.name, group_path(@event.id, group.id) %>
-  <br />
-  Based in - <%= group.city %>, <%= group.region %>
-  <br />
-  Sharing - <%= group.sharables.map{|s| s.name}.to_sentence %>
-  <br /><br />
+<% @groups.closest_to_user(current_user).visible.reject{|g| g.users.include?(current_user)}.each do |group| %>
+  <%= render :partial => 'group', :locals => {:group => group} %>
 <% end %>
