--- a/app/views/event/event_page.erb
+++ b/app/views/event/event_page.erb
@@ -12,6 +12,7 @@
                     <% unless @event.attendees.include?(current_user) %>
                       <%= link_to 'Attend', attend_event_path %>
                     <% else %>
+                      <%= link_to 'Export to Calendar', export_event_path(@event.id) %><br />
                       <%= link_to 'Cancel Attendance', cancel_attendance_path, :confirm => 'Are you sure you want to cancel your attendance of this event?' %><br /><br />
                       <%= render :partial => 'shared/update_sharables' %>
                       <%= render :partial => 'attendees' %>
