--- a/app/views/group/invite.html.erb
+++ b/app/views/group/invite.html.erb
@@ -1,6 +1,8 @@
 Enter the email address of a friend to invite to this group:<br />
 To invite multiple friends, separate their email address with a comma<br />
 <% form_tag do %>
-  <%= text_field_tag :email_addresses %><br />
+  <%= label_tag(:email_addresses, "Email Address(es)") %><%= text_field_tag :email_addresses %><br />
+  <%= label_tag(:message, "Message:") %>
+  <%= text_area_tag :message, '', :size => "24x6" %><br />
   <%= submit_tag 'Send Invitation' %>
 <% end %>
