--- a/app/views/group_mailer/group_invitation.html.erb
+++ b/app/views/group_mailer/group_invitation.html.erb
@@ -1,4 +1,6 @@
 Hello<%= @user.nil? ? '' : " #{@user.name}" %>,<br /><br />
-<%= @invitation.from.name %> has invited you to the group '<%= @group.name %>' for the event '<%= @group.event.name %>' on EventPooler.
+<%= @invitation.from.name %> has invited you to the group '<%= @group.name %>' for the event '<%= @group.event.name %>' on EventPooler.<br /><br />
+Message:<br />
+<%= @invitation.message %><br /><br />
 To join the group, click the following link:<br /><br />
 <%= group_accept_invitation_url(@invitation.token, :host => @host) %>
