user profile updates

--- a/app/views/event_mailer/contact_user.html.erb
+++ b/app/views/event_mailer/contact_user.html.erb
@@ -1,6 +1,6 @@
 Hello <%= @to_user.name %>,<br /><br />
 
-<%= @from_user.name %> has sent you a message about the "<%= @event.name %>" event on EventPooler"<br /><br />
+<%= @from_user.name %> has sent you a message on EventPooler"<br /><br />
 <hr />
 <%= @message %>
 <hr />
