front page content, not styled

--- a/app/views/main/_events_attending.html.erb
+++ b/app/views/main/_events_attending.html.erb
@@ -1,6 +1,8 @@
 <h3>My Events</h3>
 <% @my_events.each do |event| %>
-  <%= link_to CGI.unescapeHTML(event.name).html_safe, event_path(event.id) %><br />
-  <%=  Time.at(event.starts_at.to_i).strftime("%b %e, %Y at %l:%M%p") rescue "" %><br />
-  <%= event.city %>, <%= event.region %><br />
+<div>
+  <td colspan="3"><%= link_to CGI.unescapeHTML(event.name).html_safe, event_path(event.id) %><br/>
+  <%= event.city ||event.region %>
+  <%=  Time.at(event.starts_at.to_i).strftime("%b %e, %Y at %l:%M%p") rescue ""%></td>
+</div>
 <% end %>
