--- a/app/views/group_mailer/approve_membership.html.erb
+++ b/app/views/group_mailer/approve_membership.html.erb
@@ -3,7 +3,7 @@ Hello <%= @group.administrator.name %>,
 <%= @user.name %> has requested to join your group '<%= @group.name %>' for the event '<%= @group.event.name %>.
 <br /><br />
 Click the following link to approve the request:<br /><br />
-<%= approve_membership_url(@group.event.id, @group.id, @user.id, :host => @host) %>
+<%= approve_membership_url(@group.event.id, @group.id, @user.id, :host => current_request.host_with_port) %>
 <br /><br />
 Click the following link to reject the request:<br /><br />
-<%= reject_membership_url(@group.event.id, @group.id, @user.id, :host => @host) %>
+<%= reject_membership_url(@group.event.id, @group.id, @user.id, :host => current_request.host_with_port) %>
