--- a/app/views/user_mailer/forgot_password.html.erb
+++ b/app/views/user_mailer/forgot_password.html.erb
@@ -2,4 +2,4 @@ Hello <%= @user.name %>,<br /><br />
 
 Click the following link to reset your password:<br /><br />
 
-<%= reset_password_url(@user.token, :host => @host) %>
+<%= reset_password_url(@user.token, :host => current_request.host_with_port) %>
